--- a/index.html
+++ b/index.html
@@ -8,13 +8,35 @@
     <title>Challenge 9</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Playfair+Display|Raleway:300,400,500"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header class="header container">
+        <p class="header__logo">
+            <span class="logo__sign">MariaAnna</span>
+            photography
+        </p>
+        <h1 class="header__heading">See the world through my lens</h1>
+        <p class="header__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis,
+            veniam,
+            non, aut explicabo
+            temporibus quidem molestiae officia alias natus nobis.
+        </p>
+        <a href="#about" class="arrow-down fas fa-arrow-down"></a>
+    </header>
 
-
-
+    <nav class="nav">
+        <a href="#" class="nav__logo">MariaAnna</a>
+        <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#about">About me</a></li>
+            <li class="nav__item"><a class="nav__link" href="#works">Works</a></li>
+            <li class="nav__item"><a class="nav__link" href="#contact">Contact me</a></li>
+            <li class="nav__item"><a class="nav__link" href="#follow">Follow me</a></li>
+        </ul>
+    </nav>
 
 
 
