--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -30,7 +33,12 @@
 
     <nav class="nav">
         <a href="#" class="nav__logo">MariaAnna</a>
-        <ul class="nav__list">
+        <button class="nav__icon" data-toggle="collapse" data-target="#collapseExample" aria-label="Menu">
+            <div class="nav__icon-bar"></div>
+            <div class="nav__icon-bar"></div>
+            <div class="nav__icon-bar"></div>
+        </button>
+        <ul class="nav__list collapse" id="collapseExample">
             <li class="nav__item"><a class="nav__link" href="#about">About me</a></li>
             <li class="nav__item"><a class="nav__link" href="#works">Works</a></li>
             <li class="nav__item"><a class="nav__link" href="#contact">Contact me</a></li>
@@ -40,6 +48,16 @@
 
 
 
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <script src="js/script.js"></script>
 </body>
 
