--- a/index.html
+++ b/index.html
@@ -174,9 +174,7 @@
         <p class="copy text">&copy; Coded by JH</p>
     </footer>
 
-
-    <script src="http://code.jquery.com/jquery-3.4.0.min.js"
-        integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.4.0.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
